--- a/package.json
+++ b/package.json
@@ -25,23 +25,30 @@
     "picocolors": "^1.1.1",
     "picomatch": "^2.3.1",
     "source-map-js": "^1.2.1",
-    "tailwindcss": "^4.1.7",
     "tapable": "^2.2.1",
     "tar": "^7.4.3",
     "to-regex-range": "^5.0.1",
     "yallist": "^5.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    
-  "build": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
-
-}
-
-  ,
+    "build": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "\"# portfolio-tailwind-css\" \"# portfolio-tailwind-css\"",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/denitrisna7/portfolio-tailwind-css.git"
+  },
+  "bugs": {
+    "url": "https://github.com/denitrisna7/portfolio-tailwind-css/issues"
+  },
+  "homepage": "https://github.com/denitrisna7/portfolio-tailwind-css#readme"
 }
